<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginTop="10dp"
    android:background="@drawable/bg_site_check_table_item"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/ic_ent_marker" />

        <TextView
            android:id="@+id/tv_object"
            style="@style/text_title_bold"
            android:layout_width="match_parent"
            android:layout_marginLeft="10dp"
            android:text="@string/cancel"
            android:textSize="18sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:background="@color/line_divider"></View>


    <LinearLayout style="@style/text_content_layout">

        <TextView
            style="@style/object_details_key"
            android:text="@string/reporter_name" />

        <TextView
            android:id="@+id/tv_reporter_name"
            style="@style/object_details_value"
            android:text="@string/reporter_name" />
    </LinearLayout>

    <LinearLayout style="@style/text_content_layout">

        <TextView
            style="@style/object_details_key"
            android:text="@string/happen_date" />

        <TextView
            android:id="@+id/tv_date"
            style="@style/object_details_value"
            android:text="@string/reporter_name" />
    </LinearLayout>

    <LinearLayout style="@style/text_content_layout">

        <TextView
            style="@style/object_details_key"
            android:text="@string/happen_site" />

        <TextView
            android:id="@+id/tv_site"
            style="@style/object_details_value"
            android:text="@string/reporter_name" />
    </LinearLayout>

    <LinearLayout style="@style/text_content_layout">

        <TextView
            style="@style/object_details_key"
            android:text="@string/details" />

        <TextView
            android:id="@+id/tv_details"
            style="@style/object_details_value"
            android:singleLine="true"
            android:text="@string/reporter_name" />
    </LinearLayout>
</LinearLayout>